Criando o estilo das listagens com a listagem de secretarios

--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
@@ -1,65 +1,73 @@
 {% extends 'projeto/base/base.html' %}
-
+{% load static %}
 {% block title %}Listagem de Secretários | GEscolar{% endblock  %}
 
 
+    
 {% block main %}
 
-    <h2>Listagem de Secretários</h2> 
-
-    <form>
-        <fieldset>
-            <div>
-                <label for="id_ativo">Status:</label>
-                <select name="ativo" id="id_ativo">
-                    {% for item in Filtro_Status %}
-                        {% if status == item.0 %}
-                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
-                        {% else %}
-                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
-                        {% endif %}
-                    {% endfor %}    
-                    
-                </select>
-                
-            </div>
-            <button type="submit">Pesquisar</button>
-        </fieldset>
-        
-    </form>
+    <h2><b>Listagem de Secretários</b></h2> 
+    <br>
     
-    <table>
-        <thead>
-            <tr>
-                <th>Alt</th>
-                <th>Exc</Th>
-                <th>Nome</th>
-                <th>Sexo</th>
-                <th>CPF</th>
-                <th>RG</th>
-                <th>Email</th>
-                <th>Status</th>
-            </tr>
-            <a href="{% url 'secretario_novo' %}">Novo</a>
-        </thead>
-        <tbody>
-            {% for secretario in secretarios %}
+
+    <form class="form">
+        <fieldset class="container-fluid">
+            <div class="row">
+                <div class="mr-5 form-group">
+                    <label for="id_ativo">Status:</label>
+                    &nbsp;
+                    <select name="ativo" id="id_ativo" class="form-control">
+                        {% for item in Filtro_Status %}
+                            {% if status == item.0 %}
+                                <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                            {% else %}
+                                <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                            {% endif %}
+                        {% endfor %}    
+                    </select>
+                </div>
+
+                <div class="form-group mt-auto">
+                    <button type="submit" class="btn btn-info">Pesquisar</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+
+    <div class="table-responsive-lg">
+        <table class="table table-bordered table-hover">
+            <thead>
                 <tr>
-                    <td><a href="{% url 'secretario_alterar' secretario.id %}">X</a></td>
-                    <td><a href="{% url 'secretario_deletar' secretario.id %}">X</a></td>
-                    <td><a href="{% url 'secretario_consultar' secretario.id %}">{{ secretario.Nome }}</a></td>
-                    <td>{{ secretario.Sexo }}</td>
-                    <td>{{ secretario.Cpf }}</td>
-                    <td>{{ secretario.Rg }}</td>
-                    <td>{{ secretario.Usuario.email }}</td>
-                    {% if secretario.Usuario.is_active %}
-                        <td>Ativo</td>
-                    {% else %}
-                        <td>Inativo</th>
-                    {% endif %}
+                    <th><a href="{% url 'secretario_novo' %}"><img src="{% static 'img/new.png' %}" alt="Ícone de cadastro"></a></th>
+                    <th></th>
+                    <th>Nome</th>
+                    <th>Sexo</th>
+                    <th>CPF</th>
+                    <th>RG</th>
+                    <th>Email</th>
+                    <th>Status</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+                
+            </thead>
+            <tbody>
+                {% for secretario in secretarios %}
+                    <tr>
+                        <td><a href="{% url 'secretario_alterar' secretario.id %}"><img src="{% static 'img/update.png' %}" alt="Ícone de alteração"></a></td>
+                        <td><a href="{% url 'secretario_deletar' secretario.id %}"><img src="{% static 'img/delete.png' %}" alt="Ícone de exclusão"></a></td>
+                        <td><a href="{% url 'secretario_consultar' secretario.id %}" class="text-secondary">{{ secretario.Nome }}</a></td>
+                        <td>{{ secretario.Sexo }}</td>
+                        <td>{{ secretario.Cpf }}</td>
+                        <td>{{ secretario.Rg }}</td>
+                        <td>{{ secretario.Usuario.email }}</td>
+                        {% if secretario.Usuario.is_active %}
+                            <td>Ativo</td>
+                        {% else %}
+                            <td>Inativo</th>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 {% endblock  %}
