--- a/static/projeto/style.css
+++ b/static/projeto/style.css
@@ -10,14 +10,14 @@ body {
 main{
     width: 80%;
     margin-left: 10%;
-    padding: 25px 0;
+    padding: 20px 0 60px 0;
 }
 
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 56px;
+    min-height: 56px;
     line-height: 56px; 
     background-color: #f5f5f5;
     text-align: center;
